--- a/renovate.json5
+++ b/renovate.json5
@@ -1,7 +1,7 @@
 {
   extends: [
     'config:recommended',
-    ':semanticCommitTypeAll(fix)',
+    ':semanticCommits',
   ],
   dependencyDashboard: true,
 }
