--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
   hooks:
   - id: yamllint
     args: [--strict, -c=.yamllint]
+    exclude: ^config/
 - repo: https://github.com/golangci/golangci-lint
   rev: v2.2.2
   hooks:
