--- a/charts/chart/templates/manager/manager.yaml
+++ b/charts/chart/templates/manager/manager.yaml
@@ -36,6 +36,11 @@ spec:
                   command:
                     - /manager
                   image: "{{ .Values.manager.image.repository }}:{{ .Values.manager.image.tag }}"
+                  env:
+                  {{- range $key, $value := .Values.manager.env }}
+                  - name: {{ $key }}
+                    value: {{ $value | quote }}
+                  {{- end }}
                   imagePullPolicy: {{ .Values.manager.image.pullPolicy }}
                   livenessProbe:
                     httpGet:
