--- a/charts/chart/templates/manager/manager.yaml
+++ b/charts/chart/templates/manager/manager.yaml
@@ -35,6 +35,8 @@ spec:
                     {{- end }}
                   command:
                     - /manager
+                  env:
+                    {{- toYaml .Values.manager.env | nindent 20 }}
                   image: "{{ .Values.manager.image.repository }}:{{ .Values.manager.image.tag }}"
                   imagePullPolicy: {{ .Values.manager.image.pullPolicy }}
                   livenessProbe:
