feat: updated chart with image pull secret

--- a/charts/chart/templates/manager/manager.yaml
+++ b/charts/chart/templates/manager/manager.yaml
@@ -21,6 +21,10 @@ spec:
                 app.kubernetes.io/name: data-sync-operator
                 control-plane: controller-manager
         spec:
+            {{- with .Values.manager.image.pullSecrets }}
+            imagePullSecrets:
+              {{- toYaml . | nindent 16 }}
+            {{- end }}
             containers:
                 - args:
                     {{- if .Values.metrics.enable }}
