--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,13 +8,12 @@ repos:
 - repo: https://github.com/gruntwork-io/pre-commit
   rev: v0.1.30
   hooks:
-  - id: helmlint
-#  Turn this on when we get our helm chart stood up
-# - repo: https://github.com/norwoodj/helm-docs
-#   rev: v1.12.0
-#   hooks:
-#   - id: helm-docs-built
-#     files: (README\.md\.gotmpl|(Chart|requirements|values)\.yaml)$
+    - id: helmlint
+- repo: https://github.com/norwoodj/helm-docs
+  rev: v1.14.2
+  hooks:
+    - id: helm-docs-built
+      files: (README\.md\.gotmpl|(Chart|requirements|values)\.yaml)$
 - repo: https://github.com/adrienverge/yamllint
   rev: v1.37.1
   hooks:
