--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,8 +12,9 @@ repos:
 - repo: https://github.com/norwoodj/helm-docs
   rev: v1.14.2
   hooks:
-    - id: helm-docs-built
-      files: (README\.md\.gotmpl|(Chart|requirements|values)\.yaml)$
+    - id: helm-docs
+      args:
+        - --chart-search-root=charts
 - repo: https://github.com/adrienverge/yamllint
   rev: v1.37.1
   hooks:
