--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
 - repo: https://github.com/norwoodj/helm-docs
   rev: v1.14.2
   hooks:
-    - id: helm-docs
+    - id: helm-docs-built
       args:
         - --chart-search-root=charts
 - repo: https://github.com/adrienverge/yamllint
