--- a/config/crd/bases/crd.pelotech.ot_vmdiskimages.yaml
+++ b/config/crd/bases/crd.pelotech.ot_vmdiskimages.yaml
@@ -21,10 +21,6 @@ spec:
       jsonPath: .status.phase
       name: Phase
       type: string
-    - description: The name of the resource we are syncing.
-      jsonPath: .spec.name
-      name: Resource Name
-      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
@@ -152,7 +148,7 @@ spec:
                 enum:
                 - Queued
                 - Syncing
-                - Completed
+                - Ready
                 - Failed
                 type: string
             required:
