feat: added image pull secrets to chart values.yaml

--- a/charts/chart/values.yaml
+++ b/charts/chart/values.yaml
@@ -11,6 +11,9 @@ manager:
   args:
     - --leader-elect
 
+  # Image pull secrets
+  imagePullSecrets: []
+
   # Environment variables
   env: []
 
