fix: update install destination in helm action

--- a/.github/workflows/test-chart.yml
+++ b/.github/workflows/test-chart.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Install Helm chart for project
         run: |
-          helm install my-release ./dist/chart --create-namespace --namespace data-sync-operator-system
+          helm install my-release ./chart/chart --create-namespace --namespace data-sync-operator-system
 
       - name: Check Helm release status
         run: |
