--- a/chart/templates/monitoring/servicemonitor.yaml
+++ b/chart/templates/monitoring/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.prometheus.enable }}
+{{- if .Values.metrics.enable }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
