--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -56,16 +56,13 @@ crd:
 
 # Controller metrics endpoint.
 # Enable to expose /metrics endpoint with RBAC protection.
+# Enabling metrics will also enable prometheus.
+# Requires prometheus-operator to be installed in the cluster.
 metrics:
-  enable: true
+  enable: false
   port: 8443  # Metrics server port
 
 # Cert-manager integration for TLS certificates.
 # Required for webhook certificates and metrics endpoint certificates.
 certManager:
-  enable: false
-
-# Prometheus ServiceMonitor for metrics scraping.
-# Requires prometheus-operator to be installed in the cluster.
-prometheus:
   enable: false
