--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "separate-pull-requests": true,
+  "include-v-in-tag": true,
+  "tag-separator": "/",
   "packages": {
     "chart": {
       "release-type": "helm"
