--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,10 +1,63 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "include-component-in-tag": false,
+  "separate-pull-requests": true,
   "include-v-in-tag": true,
   "tag-separator": "/",
-  "release-type": "simple",
   "packages": {
-    ".": {}
+    "chart": {
+      "release-type": "helm"
+    },
+    ".": {
+      "release-type": "go",
+      "exclude-paths": [
+        "chart"
+      ]
     }
-  }
+  },
+  "changelog-sections": [
+    {
+      "type": "feat",
+      "section": "Features"
+    },
+    {
+      "type": "fix",
+      "section": "Bug Fixes"
+    },
+    {
+      "type": "revert",
+      "section": "Reverts"
+    },
+    {
+      "type": "perf",
+      "section": "Refactors"
+    },
+    {
+      "type": "refactor",
+      "section": "Refactors"
+    },
+    {
+      "type": "chore",
+      "section": "Chores"
+    },
+    {
+      "type": "ci",
+      "section": "Chores"
+    },
+    {
+      "type": "build",
+      "section": "Chores"
+    },
+    {
+      "type": "style",
+      "section": "Chores"
+    },
+    {
+      "type": "docs",
+      "section": "Docs"
+    },
+    {
+      "type": "test",
+      "section": "Tests"
+    }
+  ]
+}
