chore: updated release please workflow to handle building a helm artifact and app artifact

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
-      release_version: ${{ steps.release.outputs.version }}
+      paths_released: ${{ steps.release.outputs.paths_released }}
       tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       - uses: googleapis/release-please-action@v4
@@ -24,8 +24,8 @@ jobs:
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
-  publish-tag:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) }}
+  publish-tag-app-artifact:
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), '.') }}
     runs-on: ubuntu-latest
     needs: [release-please]
     permissions:
@@ -59,19 +59,32 @@ jobs:
             BUILD_VERSION="${{ needs.release-please.outputs.tag_name }}"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-#      - name: Build dependencies Helm - kic
-#        uses: WyriHaximus/github-action-helm3@v4
-#        with:
-#          exec: helm dependency build charts/kic
-      # - name: Chart | Push - data-sync-operator
-      #   uses: appany/helm-oci-chart-releaser@v0.4.2
-      #   with:
-      #     name: kic
-      #     repository: pelotech/charts
-      #     tag: ${{ needs.release-please.outputs.release_version }}
-      #     registry: ghcr.io
-      #     registry_username: ${{ github.actor }}
-      #     registry_password: ${{ secrets.github_token }}
+
+  publish-tag-chart-artifact:
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'chart') }}
+    runs-on: ubuntu-latest
+    needs: [release-please]
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v6
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Chart | Push - data-sync-operator-chart
+        uses: appany/helm-oci-chart-releaser@v0.4.2
+        with:
+          name: data-sync-operator-chart
+          repository: ${{ github.repository }}
+          chart_path: chart
+          tag: ${{ needs.release-please.outputs.tag_name }}
+          registry: ghcr.io
+          registry_username: ${{ github.actor }}
+          registry_password: ${{ secrets.GITHUB_TOKEN }}
 
   publish-dev:
     if: ${{ ! fromJSON(needs.release-please.outputs.releases_created) }}
@@ -96,7 +109,6 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            # set latest tag for default branch
             type=raw,value=latest,enable={{is_default_branch}}
       - name: sha short
         id: sha
