--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: data-sync-operator
+name: data-sync-operator-chart
 description: A Helm chart to distribute the project data-sync-operator
 type: application
 version: 1.0.1
