ci: get version according to how release please outputs them

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -26,11 +26,10 @@ jobs:
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
       - name: versions
-        if: ${{ fromJSON(steps.release.outputs.releases_created) }}
         id: versions
         run: |
-          echo "app_version=${{ fromJson(steps.release.outputs['.']).version }}" >> $GITHUB_OUTPUT
-          echo "chart_version=${{ fromJson(steps.release.outputs.chart).version }}" >> $GITHUB_OUTPUT
+          echo "app_version=${{ fromJson(steps.release.outputs.version) }}" >> $GITHUB_OUTPUT
+          echo "chart_version=${{ fromJson(steps.release.outputs['chart--version']) }}" >> $GITHUB_OUTPUT
 
   publish-tag-app-artifact:
     if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), '.') }}
