--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -36,7 +36,7 @@ jobs:
           echo "chart_version=${{ fromJson(steps.release.outputs['data-sync-operator-chart--version'] || '0.0.0') }}" >> $GITHUB_OUTPUT
 
   publish-tag-app-artifact:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), '.') }}
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'data-sync-operator') }}
     runs-on: ubuntu-latest
     needs: [release-please]
     permissions:
@@ -72,7 +72,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   publish-tag-chart-artifact:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'chart') }}
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'data-sync-operator-chart') }}
     runs-on: ubuntu-latest
     needs: [release-please]
     permissions:
