ci: fix syntax error

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -32,7 +32,7 @@ jobs:
         if: ${{ fromJSON(steps.release.outputs.releases_created) }}
         id: versions
         run: |
-          echo "app_version=${{ fromJson(steps.release.outputs.['data-sync-operator--version'] || '0.0.0') }}" >> $GITHUB_OUTPUT
+          echo "app_version=${{ fromJson(steps.release.outputs['data-sync-operator--version'] || '0.0.0') }}" >> $GITHUB_OUTPUT
           echo "chart_version=${{ fromJson(steps.release.outputs['data-sync-operator-chart--version'] || '0.0.0') }}" >> $GITHUB_OUTPUT
 
   publish-tag-app-artifact:
