--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -15,8 +15,8 @@ jobs:
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
       paths_released: ${{ steps.release.outputs.paths_released }}
-      app_version: ${{ steps.release.outputs['data-sync-operator--version'] }}
-      chart_version: ${{ steps.release.outputs['data-sync-operator-chart--version'] }}
+      app_version: ${{ steps.release.outputs.version }}
+      chart_version: ${{ steps.release.outputs['chart--version'] }}
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
@@ -26,7 +26,7 @@ jobs:
           manifest-file: .release-please-manifest.json
 
   publish-tag-app-artifact:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'data-sync-operator') }}
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), '.') }}
     runs-on: ubuntu-latest
     needs: [release-please]
     permissions:
@@ -62,7 +62,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   publish-tag-chart-artifact:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'data-sync-operator-chart') }}
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'chart') }}
     runs-on: ubuntu-latest
     needs: [release-please]
     permissions:
