--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -79,8 +79,8 @@ jobs:
       - name: Chart | Push - data-sync-operator-chart
         uses: appany/helm-oci-chart-releaser@v0.5.0
         with:
-          name: data-sync-operator-chart
-          repository: ${{ github.repository }}/chart
+          name: data-sync-operator
+          repository: pelotech/charts
           path: chart
           tag: ${{ needs.release-please.outputs.chart_version }}
           registry: ghcr.io
