--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -79,7 +79,7 @@ jobs:
       - name: Chart | Push - data-sync-operator-chart
         uses: appany/helm-oci-chart-releaser@v0.5.0
         with:
-          name: data-sync-operator
+          name: data-sync-operator-chart
           repository: pelotech/charts
           path: chart
           tag: ${{ needs.release-please.outputs.chart_version }}
