--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -7,16 +7,14 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  issues: write
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
-      paths_released: ${{ steps.release.outputs.paths_released }}
-      app_version: ${{ steps.release.outputs.version }}
-      chart_version: ${{ steps.release.outputs['chart--version'] }}
+      release_version: ${{ steps.release.outputs.version }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
@@ -25,15 +23,15 @@ jobs:
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
-  publish-tag-app-artifact:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), '.') }}
+  publish-tag:
+    if: ${{ fromJSON(needs.release-please.outputs.releases_created) }}
     runs-on: ubuntu-latest
     needs: [release-please]
     permissions:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to GitHub Container Registry
@@ -48,7 +46,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,pattern={{version}},value=${{ needs.release-please.outputs.app_version }}
+            type=raw,pattern={{version}},value=${{ needs.release-please.outputs.tag_name }}
       - name: Build and push Docker image tag
         uses: docker/build-push-action@v6
         with:
@@ -57,35 +55,18 @@ jobs:
           file: Dockerfile
           push: true
           build-args: |
-            BUILD_VERSION="${{ needs.release-please.outputs.app_version }}"
+            BUILD_VERSION="${{ needs.release-please.outputs.tag_name }}"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  publish-tag-chart-artifact:
-    if: ${{ fromJSON(needs.release-please.outputs.releases_created) && contains(fromJSON(needs.release-please.outputs.paths_released), 'chart') }}
-    runs-on: ubuntu-latest
-    needs: [release-please]
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v6
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - name: Chart | Push
+        uses: appany/helm-oci-chart-releaser@v0.4.2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Chart | Push - data-sync-operator-chart
-        uses: appany/helm-oci-chart-releaser@v0.5.0
-        with:
-          name: data-sync-operator-chart
+          name: data-sync-operator
           repository: pelotech/charts
-          path: chart
-          tag: ${{ needs.release-please.outputs.chart_version }}
+          tag: ${{ needs.release-please.outputs.release_version }}
           registry: ghcr.io
           registry_username: ${{ github.actor }}
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
+          registry_password: ${{ secrets.github_token }}
 
   publish-dev:
     if: ${{ ! fromJSON(needs.release-please.outputs.releases_created) }}
@@ -95,7 +76,7 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Log in to the Container registry
@@ -110,6 +91,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
+            # set latest tag for default branch
             type=raw,value=latest,enable={{is_default_branch}}
       - name: sha short
         id: sha
