--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "include-component-in-tag": true,
+  "include-component-in-tag": false,
   "separate-pull-requests": true,
   "include-v-in-tag": false,
   "tag-separator": "/",
