--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,22 +1,21 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "include-component-in-tag": false,
   "separate-pull-requests": true,
-  "include-v-in-tag": true,
+  "include-v-in-tag": false,
   "tag-separator": "/",
-  "packages": {
-    "chart": {
-      "release-type": "helm",
-      "package-name": "data-sync-operator-chart",
-      "extra-files": ["README.md"],
-      "exclude-paths": [
-        ".github"
-      ]
+  "release-type": "go",
+  "extra-files": [
+    {
+      "type": "generic",
+      "path": "charts/data-sync-operator/Chart.yaml"
     },
+    "charts/data-sync-operator/README.md"
+  ],
+  "packages": {
     ".": {
-      "release-type": "go",
-      "package-name": "data-sync-operator",
       "exclude-paths": [
-        "chart",
+        "charts",
         ".github"
       ]
     }
