chore: regenerate chart to have this new rbac role

--- a/charts/data-sync-operator/templates/rbac/manager-role.yaml
+++ b/charts/data-sync-operator/templates/rbac/manager-role.yaml
@@ -10,6 +10,7 @@ rules:
       verbs:
         - create
         - delete
+        - deletecollection
         - get
         - list
         - patch
@@ -22,6 +23,7 @@ rules:
       verbs:
         - create
         - delete
+        - deletecollection
         - get
         - list
         - patch
@@ -34,6 +36,7 @@ rules:
       verbs:
         - create
         - delete
+        - deletecollection
         - get
         - list
         - patch
@@ -44,12 +47,14 @@ rules:
       resources:
         - vmdiskimages/finalizers
       verbs:
+        - deletecollection
         - update
     - apiGroups:
         - crd.pelotech.ot
       resources:
         - vmdiskimages/status
       verbs:
+        - deletecollection
         - get
         - patch
         - update
@@ -60,6 +65,7 @@ rules:
       verbs:
         - create
         - delete
+        - deletecollection
         - get
         - list
         - patch
