--- a/charts/data-sync-operator/templates/rbac/manager-role.yaml
+++ b/charts/data-sync-operator/templates/rbac/manager-role.yaml
@@ -6,6 +6,13 @@ rules:
     - apiGroups:
         - ""
       resources:
+        - events
+      verbs:
+        - create
+        - patch
+    - apiGroups:
+        - ""
+      resources:
         - persistentvolumeclaims
       verbs:
         - create
