feat: added new phase for visibility into retry loop

--- a/config/crd/bases/crd.pelotech.ot_vmdiskimages.yaml
+++ b/config/crd/bases/crd.pelotech.ot_vmdiskimages.yaml
@@ -150,6 +150,7 @@ spec:
                 - Syncing
                 - Ready
                 - Failed
+                - RetryableFailure
                 type: string
             required:
             - phase
