--- a/charts/data-sync-operator/templates/crd/vmdiskimages.crd.pelotech.ot.yaml
+++ b/charts/data-sync-operator/templates/crd/vmdiskimages.crd.pelotech.ot.yaml
@@ -146,6 +146,7 @@ spec:
                                     - Syncing
                                     - Ready
                                     - Failed
+                                    - RetryableFailure
                                 type: string
                         required:
                             - phase
