feat: vmdi missing image self heal (#63)
* feat: added two new fields to cr and generated boilerplate

* feat: add checks to see if we have a missing artifact in provisioner

* refactor: rename fields to be more descriptive

* feat: add new values to config to handle retrying totally failed syncs

* feat: wired up

* refactor: moved to time based failure

* refactor: let library check on sync

* refactor: remove other unneeded fields

* refactor: formatting

* chore: generate manifests again

* fix: messy names and duplicate env var targeting

* feat: added more condition reasons

* feat: added new phase for visibility into retry loop

* feat: handling new phase in controller and service code

* chore: regenerate chart to include new phase

* fix: wait 10 seconds before checking sync status again

* chore: regenerate resources after adding LastFailureTime to spec

* fix: resolve finalizer conflict and now respecting backoff behavior

* chore: regenerate the chart

* fix: pr feedback

* fix: resolve nit

* fix: consistent names

* fix: better boolean name

* fix: 10 as concurrency limit on sync. Average number of labs per sync is ~3 so lets us do 4 labs

--- a/charts/data-sync-operator/templates/crd/vmdiskimages.crd.pelotech.ot.yaml
+++ b/charts/data-sync-operator/templates/crd/vmdiskimages.crd.pelotech.ot.yaml
@@ -137,6 +137,9 @@ spec:
                                 type: array
                             failureCount:
                                 type: integer
+                            lastFailureTime:
+                                format: date-time
+                                type: string
                             message:
                                 description: A human-readable message providing more details about the current phase.
                                 type: string
@@ -146,6 +149,7 @@ spec:
                                     - Syncing
                                     - Ready
                                     - Failed
+                                    - RetryableFailure
                                 type: string
                         required:
                             - phase
