--- a/config/crd/bases/crd.pelotech.ot_vmdiskimages.yaml
+++ b/config/crd/bases/crd.pelotech.ot_vmdiskimages.yaml
@@ -140,6 +140,9 @@ spec:
                 type: array
               failureCount:
                 type: integer
+              lastFailureTime:
+                format: date-time
+                type: string
               message:
                 description: A human-readable message providing more details about
                   the current phase.
@@ -150,6 +153,7 @@ spec:
                 - Syncing
                 - Ready
                 - Failed
+                - RetryableFailure
                 type: string
             required:
             - phase
